mips_fun/mips_fun/solution1/solution1.log
==============================================================
Vivado(TM) HLS - High-Level Synthesis from C, C++ and SystemC v2019.2 (64-bit)
Copyright 1986-2019 Xilinx, Inc. All Rights Reserved.
==============================================================
INFO: [SYN 201-201] Setting up clock 'default' with a period of 10ns.
INFO: [HLS 200-10] Setting target device to 'xc7z020-clg484-1'
INFO: [SYN 201-201] Setting up clock 'default' with a period of 10ns.
INFO: [SCHED 204-61] Option 'relax_ii_for_timing' is enabled, will increase II to preserve clock frequency constraints.
INFO: [HLS 200-10] Analyzing design file 'mips_fun.c' ... 
ERROR: [HLS 200-70] Compilation errors found: In file included from mips_fun.c:1:
mips_fun.c:136:14: error: use of undeclared identifier 'A'
   dmem[i] = A[i];
             ^
mips_fun.c:302:38: error: use of undeclared identifier 'outData'
    printf("dem : %d : %d\n",dmem[j],outData[j]);
                                     ^
mips_fun.c:304:32: error: use of undeclared identifier 'outData'
    main_result += (dmem[j] != outData[j]);
                               ^
3 errors generated.
==============================================================
Vivado(TM) HLS - High-Level Synthesis from C, C++ and SystemC v2019.2 (64-bit)
Copyright 1986-2019 Xilinx, Inc. All Rights Reserved.
==============================================================
INFO: [SYN 201-201] Setting up clock 'default' with a period of 10ns.
INFO: [HLS 200-10] Setting target device to 'xc7z020-clg484-1'
INFO: [SCHED 204-61] Option 'relax_ii_for_timing' is enabled, will increase II to preserve clock frequency constraints.
INFO: [HLS 200-10] Analyzing design file 'mips_fun.c' ... 
INFO: [HLS 200-111] Finished Linking Time (s): cpu = 00:00:01 ; elapsed = 00:00:09 . Memory (MB): peak = 186.746 ; gain = 94.344
INFO: [HLS 200-111] Finished Checking Pragmas Time (s): cpu = 00:00:01 ; elapsed = 00:00:09 . Memory (MB): peak = 186.746 ; gain = 94.344
INFO: [HLS 200-10] Starting code transformations ...
INFO: [HLS 200-111] Finished Standard Transforms Time (s): cpu = 00:00:01 ; elapsed = 00:00:09 . Memory (MB): peak = 186.746 ; gain = 94.344
INFO: [HLS 200-10] Checking synthesizability ...
INFO: [HLS 200-111] Finished Checking Synthesizability Time (s): cpu = 00:00:01 ; elapsed = 00:00:09 . Memory (MB): peak = 186.746 ; gain = 94.344
WARNING: [ANALYSIS 214-31] The program may have out of bound access of array variable 'A' in function 'check' (mips_fun.c:136:4).
INFO: [HLS 200-111] Finished Pre-synthesis Time (s): cpu = 00:00:02 ; elapsed = 00:00:10 . Memory (MB): peak = 186.746 ; gain = 94.344
INFO: [HLS 200-472] Inferring partial write operation for 'reg' (mips_fun.c:130:4)
INFO: [HLS 200-472] Inferring partial write operation for 'reg' (mips_fun.c:132:7)
INFO: [HLS 200-472] Inferring partial write operation for 'dmem' (mips_fun.c:136:4)
INFO: [HLS 200-472] Inferring partial write operation for 'reg' (mips_fun.c:161:5)
INFO: [HLS 200-472] Inferring partial write operation for 'reg' (mips_fun.c:164:5)
INFO: [HLS 200-472] Inferring partial write operation for 'reg' (mips_fun.c:181:5)
INFO: [HLS 200-472] Inferring partial write operation for 'reg' (mips_fun.c:184:5)
INFO: [HLS 200-472] Inferring partial write operation for 'reg' (mips_fun.c:188:5)
INFO: [HLS 200-472] Inferring partial write operation for 'reg' (mips_fun.c:191:5)
INFO: [HLS 200-472] Inferring partial write operation for 'reg' (mips_fun.c:194:5)
INFO: [HLS 200-472] Inferring partial write operation for 'reg' (mips_fun.c:197:5)
INFO: [HLS 200-472] Inferring partial write operation for 'reg' (mips_fun.c:200:5)
INFO: [HLS 200-472] Inferring partial write operation for 'reg' (mips_fun.c:203:5)
INFO: [HLS 200-472] Inferring partial write operation for 'reg' (mips_fun.c:206:5)
INFO: [HLS 200-472] Inferring partial write operation for 'reg' (mips_fun.c:210:5)
INFO: [HLS 200-472] Inferring partial write operation for 'reg' (mips_fun.c:213:5)
INFO: [HLS 200-472] Inferring partial write operation for 'reg' (mips_fun.c:231:8)
INFO: [HLS 200-472] Inferring partial write operation for 'reg' (mips_fun.c:243:5)
INFO: [HLS 200-472] Inferring partial write operation for 'reg' (mips_fun.c:247:5)
INFO: [HLS 200-472] Inferring partial write operation for 'reg' (mips_fun.c:250:5)
INFO: [HLS 200-472] Inferring partial write operation for 'reg' (mips_fun.c:253:5)
INFO: [HLS 200-472] Inferring partial write operation for 'reg' (mips_fun.c:257:5)
INFO: [HLS 200-472] Inferring partial write operation for 'dmem' (mips_fun.c:260:5)
INFO: [HLS 200-472] Inferring partial write operation for 'reg' (mips_fun.c:264:5)
INFO: [HLS 200-472] Inferring partial write operation for 'reg' (mips_fun.c:281:5)
INFO: [HLS 200-472] Inferring partial write operation for 'reg' (mips_fun.c:285:5)
INFO: [HLS 200-472] Inferring partial write operation for 'reg' (mips_fun.c:294:4)
INFO: [HLS 200-111] Finished Architecture Synthesis Time (s): cpu = 00:00:02 ; elapsed = 00:00:10 . Memory (MB): peak = 186.746 ; gain = 94.344
INFO: [HLS 200-10] Starting hardware synthesis ...
INFO: [HLS 200-10] Synthesizing 'check' ...
INFO: [HLS 200-10] ----------------------------------------------------------------
INFO: [HLS 200-42] -- Implementing module 'check' 
INFO: [HLS 200-10] ----------------------------------------------------------------
INFO: [SCHED 204-11] Starting scheduling ...
INFO: [SCHED 204-11] Finished scheduling.
INFO: [HLS 200-111]  Elapsed time: 10.272 seconds; current allocated memory: 108.920 MB.
INFO: [BIND 205-100] Starting micro-architecture generation ...
INFO: [BIND 205-101] Performing variable lifetime analysis.
INFO: [BIND 205-101] Exploring resource sharing.
INFO: [BIND 205-101] Binding ...
INFO: [BIND 205-100] Finished micro-architecture generation.
INFO: [HLS 200-111]  Elapsed time: 0.414 seconds; current allocated memory: 110.539 MB.
INFO: [HLS 200-10] ----------------------------------------------------------------
INFO: [HLS 200-10] -- Generating RTL for module 'check' 
INFO: [HLS 200-10] ----------------------------------------------------------------
INFO: [RTGEN 206-500] Setting interface mode on function 'check' to 'ap_ctrl_hs'.
INFO: [RTGEN 206-100] Finished creating RTL model for 'check'.
INFO: [HLS 200-111]  Elapsed time: 0.472 seconds; current allocated memory: 112.479 MB.
INFO: [HLS 200-790] **** Loop Constraint Status: All loop constraints were satisfied.
INFO: [HLS 200-789] **** Estimated Fmax: 117.51 MHz
INFO: [RTMG 210-279] Implementing memory 'check_A_rom' using distributed ROMs.
INFO: [RTMG 210-279] Implementing memory 'check_imem_rom' using auto ROMs.
INFO: [RTMG 210-279] Implementing memory 'check_outData_rom' using distributed ROMs.
INFO: [RTMG 210-278] Implementing memory 'check_reg_ram (RAM)' using block RAMs.
INFO: [RTMG 210-278] Implementing memory 'check_dmem_ram (RAM)' using block RAMs.
INFO: [HLS 200-111] Finished generating all RTL models Time (s): cpu = 00:00:05 ; elapsed = 00:00:15 . Memory (MB): peak = 186.746 ; gain = 94.344
INFO: [VHDL 208-304] Generating VHDL RTL for check.
INFO: [VLOG 209-307] Generating Verilog RTL for check.
INFO: [HLS 200-112] Total elapsed time: 14.716 seconds; peak allocated memory: 112.479 MB.
